cabal-version:      3.0

name:               typst-hs-test-packages
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            MIT
license-file:       LICENSE

author:             Eli Adelhult, Jonathan Widén, and Leopold Wigbratt
maintainer:         hello@eli.nu

category:           Language
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

test-suite typst-hs-test-packages-test
    import:           warnings
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:    base  ^>=4.17.2.1
                    , HUnit ^>=1.6.2.0
                    , Glob  ^>=0.10.2
                    , text
                    , typst
                    , process >= 1.6.18.0